@@ -1,6 +1,7 @@
 Ver.
 --------------------------------
 - Bugfix - Fix Communication visibility (#110)
+- Bugfix - Fix update of the TeamId, UpdateMissionStatus based on person and not on cache
 
 Ver. 3.9.6 - 2022-10-05
 --------------------------------
